Fix size of pipeline graphic container (prevents horizontal overscroll on mobile)

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 }
 
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden;
   overscroll-behavior-x: none;
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch; */
 }
 .parametric-article-nav {
   overflow-x: visible;
@@ -182,10 +182,6 @@ h1, h2, h3, h4, h6 {
   width: 100%;
 }
 
-.idyll-scroll-graphic > div {
-  max-width: calc(100vw - 15px);
-}
-
 .idyll-root > div > img {
   margin-left: 50px;
 }
@@ -217,7 +213,8 @@ h1, h2, h3, h4, h6 {
   }
 
   .idyll-scroll-graphic > div {
-    padding-right: 1em;
+    padding-right: 0;
+    max-width: 100%;
   }
 }
 
@@ -235,7 +232,8 @@ h1, h2, h3, h4, h6 {
   }
 
   .idyll-scroll-graphic > div {
-    padding-right: 1em;
+    padding-right: 0;
+    max-width: 100%;
   }
 }
 
